--- a/SCM/contest/contest.ioc
+++ b/SCM/contest/contest.ioc
@@ -25,6 +25,8 @@ Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.I2C_Mode=I2C_Fast
+I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
