--- a/SCM/Gimbal/Gimbal.ioc
+++ b/SCM/Gimbal/Gimbal.ioc
@@ -95,13 +95,14 @@ Mcu.Pin13=PA14
 Mcu.Pin14=PC11
 Mcu.Pin15=PD6
 Mcu.Pin16=PB3
-Mcu.Pin17=PB5
-Mcu.Pin18=PB7
-Mcu.Pin19=PB9
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB7
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_SYS_VS_tim4
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_tim4
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PC1
 Mcu.Pin4=PC2
 Mcu.Pin5=PA0-WKUP
@@ -109,7 +110,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PB1
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -143,7 +144,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Mode=Asynchronous
 PA0-WKUP.Signal=UART4_TX
 PA1.GPIOParameters=GPIO_PuPd
-PA1.GPIO_PuPd=GPIO_PULLDOWN
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA10.Mode=Asynchronous
@@ -163,6 +164,10 @@ PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3.Locked=true
 PB3.PinState=GPIO_PIN_SET
 PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLDOWN
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Speed,PinState
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
@@ -180,17 +185,17 @@ PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_PuPd
-PC0.GPIO_PuPd=GPIO_PULLDOWN
+PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.GPIOParameters=GPIO_PuPd
-PC1.GPIO_PuPd=GPIO_PULLDOWN
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Locked=true
 PC1.Signal=GPIO_Input
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
 PC2.GPIOParameters=GPIO_PuPd
-PC2.GPIO_PuPd=GPIO_PULLDOWN
+PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.Locked=true
 PC2.Signal=GPIO_Input
 PD6.Mode=Asynchronous
